# robot_speech

./: README.md  head
audio_and_speech/audio_and_speech_common/: CMakeLists.txt  package.xml
audio_and_speech/audio_and_speech_common/action/: speech.action
audio_and_speech/audio_and_speech_common/include/audio_and_speech_common/: audio_and_speech_common.h
audio_and_speech/audio_and_speech_common/scripts/: test_invoke_speech.py
audio_and_speech/audio_and_speech_common/src/: audio_and_speech_common.cpp
audio_and_speech/cepstral_tts/: CMakeLists.txt  README.md  package.xml
audio_and_speech/cepstral_tts/action/: sound.action
audio_and_speech/cepstral_tts/launch/: play_wav.launch  robot_sounds.launch  text_to_speech.launch
audio_and_speech/cepstral_tts/src/: sound_server.py  speech_server.py
audio_and_speech/cepstral_tts/src/tests/: play_wav_file_basic_test.py  sound_test_client.py  speech_test_client.py
speech_recognition/google_assistant_speech/: CMakeLists.txt  README.md  package.xml  setup.py
speech_recognition/google_assistant_speech/launch/: google_assistant_speech.launch  test_assistant.launch
speech_recognition/google_assistant_speech/resources/actions/: README.md  RobotActions.json  creds.data
speech_recognition/google_assistant_speech/resources/actions/save/: 1RobotActions.json  2RobotActions.json  RobotActions (copy).json  RobotActions (works2).json  RobotActions (works3).json  RobotActions_full.json  actions.json
speech_recognition/google_assistant_speech/scripts/: assistant_object.py  google_assistant_speech.py  snowboydecoder.py
speech_recognition/google_cloud_speech/: CMakeLists.txt  README.md  package.xml  setup.py
speech_recognition/google_cloud_speech/launch/: google_cloud_speech.launch  test_speech.launch
speech_recognition/google_cloud_speech/scripts/: google_cloud_speech.py  setup.py
speech_recognition/google_cloud_speech/scripts/resources/: microphone_on.pmdl  penny.pmdl  sheldon.pmdl
speech_recognition/houndify_cloud_speech/: CMakeLists.txt  README.md  package.xml  setup.py
speech_recognition/houndify_cloud_speech/launch/: houndify_cloud_speech.launch  houndify_keys.launch
speech_recognition/houndify_cloud_speech/resources/: jarvis.pmdl  penny.pmdl
speech_recognition/houndify_cloud_speech/scripts/: houndify.py  houndify_cloud_speech.py  keyword_detector.py
speech_recognition/speech_handler/: CMakeLists.txt  README.md  package.xml  setup.py
speech_recognition/speech_handler/config/: params.yaml
speech_recognition/speech_handler/launch/: speech_handler.launch
speech_recognition/speech_handler/scripts/: intent_extraction.py
speech_recognition/speech_recognition_common/: CMakeLists.txt  package.xml
speech_recognition/speech_recognition_common/srv/: speech_recognition_intent.srv
